--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./config/webpack.prod.config.js",
-    "dev": "cross-env NODE_ENV=dev node bin/www",
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=dev node bin/www",
     "prod": "cross-env PORT=8080 NODE_ENV=prod node bin/www",
     "analyzer": "webpack --config ./config/webpack.analyzer.config.js"
   },
@@ -17,6 +17,10 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@types/node": "^14.0.24",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/webpack": "^4.41.21",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
@@ -33,6 +37,10 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.4",
+    "ts-loader": "^8.0.1",
+    "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.9.7",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
